# rust-learn

add/: notes.txt
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: mod.rs
branches/src/: main.rs
cargo_cratesio/: Cargo.toml  notes.txt
cargo_cratesio/src/: lib.rs  main.rs
chapter-16-fearless-concurrency/fc_1/: Cargo.toml
chapter-16-fearless-concurrency/fc_1/src/: main.rs
chapter-16-fearless-concurrency/fc_message_passing_channels/: Cargo.toml
chapter-16-fearless-concurrency/fc_message_passing_channels/src/: main.rs
chapter-16-fearless-concurrency/fc_move/: Cargo.toml
chapter-16-fearless-concurrency/fc_move/src/: main.rs
chapter-16-fearless-concurrency/fc_shared_state_concurrency/: Cargo.toml
chapter-16-fearless-concurrency/fc_shared_state_concurrency/src/: main.rs
chapter-17-oop/blog/src/: lib.rs  lib_1.rs
chapter-17-oop/gui/src/: lib.rs  main.rs
collections/src/: main.rs
enums/src/: main.rs
error_handling/src/: main.rs
functional_rust/: Cargo.toml
functional_rust/src/: lib.rs  main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/src/: main.rs
hello_world/: main.rs
lifetimes/src/: main.rs
loops/src/: main.rs
matching/src/: main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
reference/src/: main.rs
restaurant/src/: lib.rs
restaurant_2/src/: lib.rs
slice/src/: main.rs
smart_pointers/src/: lib.rs  main.rs  main_1.rs  main_2.rs
structs/src/: main.rs
traits/src/: lib.rs  main.rs
variables/src/: main.rs
(+1 files in other folders)
